Fixed overflow when clicking

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ html {
 
 body {
     font-family: "Poppins", sans-serif;
+    height: 100vh;
+    overflow: hidden;
 }
 
 h1 {
